# SEUDoraemon

./: CMakeLists.txt  ChangeLog  README.md  main.cpp
RoBoIO/Include/: common.h
bioloid/: BioFixedActCtrl.cpp  BioloidCtrl.h
camera/: v4l2uvc.c
com/: AD.cpp  AX12_C3.h  CMakeLists.txt  CMakeLists.txt~  Gyro.cpp~  Gyro.h~  IMU.cpp  IMU.h
data/: bioloid.txt  bioloid_pose.txt
localization/: CMakeLists.txt  DoraIMU.cpp  DoraIMU.h
rmg/: CMakeLists.txt  rmg146.cpp
seumath/: Math.hpp  Matrix.hpp  Number.hpp  TLine2.hpp  TMatrix.hpp  Vector.hpp
src/: CMakeLists.txt  main.cpp
src/action/: CMakeLists.txt  DoraAction.cpp  DoraAction.h  DoraCommand.cpp  DoraCommand.h
src/bioloid/: BioFixedActCtrl.h  BioloidCtrl.cpp  BioloidPerception.cpp  IntfBioloid.cpp  IntfBioloid.h
src/camera/: CMakeLists.txt  camera.c  camera.h  utils.c
src/com/: AD.h  AX12_C3.cpp  CMakeLists.txt  CommUnit.cpp  CommUnit.h  IMU.cpp  IMU.h
src/core/: CMakeLists.txt  DoraCommand.cpp  DoraCommand.h  DoraMutiThreadData.cpp  DoraMutiThreadData.h  DoraPathPlanning.cpp  DoraPathPlanning.h  DoraWorldModel.cpp  DoraWorldModel.h  DoraemonCtrl.cpp  DoraemonCtrl.h
src/libs/seumath/: Angle.hpp  Defines.hpp  TConvexPolygon.hpp  TSegment2.hpp  TVector.hpp
src/perception/: CMakeLists.txt  DoraBasicPerception.h  DoraCamera.cpp  DoraCamera.h  DoraIMU.cpp  DoraIMU.h  DoraPerceptions.h
src/rmg/: CMakeLists.txt  rmg146.h
