#SET(AGENT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/agent")

#ADD_SUBDIRECTORY( libs )
INCLUDE_DIRECTORIES(./libs)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/libs/RoBoIO/LINUX)
ADD_SUBDIRECTORY( com )
ADD_SUBDIRECTORY( perception )
ADD_SUBDIRECTORY( camera )
ADD_SUBDIRECTORY( rmg )
ADD_SUBDIRECTORY( bioloid )
INCLUDE_DIRECTORIES(./)
ADD_EXECUTABLE(seuDoraemon main.cpp)
TARGET_LINK_LIBRARIES(seuDoraemon
bioloid
camera
com
rmg
perception
pthread
RBIO.a
)
SET( CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/bin/")
INSTALL(TARGETS seuDoraemon 
RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
)

