#SET(AGENT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/agent")

#ADD_SUBDIRECTORY( libs )
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(./libs)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/libs/RoBoIO/LINUX)
ADD_SUBDIRECTORY( com )
ADD_SUBDIRECTORY( perception )
ADD_SUBDIRECTORY( action )
ADD_SUBDIRECTORY( core )

ADD_EXECUTABLE(seuDoraemon main.cpp)
TARGET_LINK_LIBRARIES(seuDoraemon
com
dora_perception
dora_action
dora_core
pthread
)
SET( CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/bin/")
INSTALL(TARGETS seuDoraemon 
RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
)

